added jsonb serialization for post options

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -6,6 +6,12 @@ h1 Listing posts
     .input-group-append
       = submit_tag 'Search', class: 'btn btn-dark'
 
+br
+
+= link_to 'New Post', new_post_path
+
+br
+
 table
   thead
     tr
