--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -12,4 +12,13 @@
   .field
     = f.label :description
     = f.text_area :description
+  .field
+    = f.label :active
+    = f.label :active, "Yes", value: "true"
+    = radio_button :post, :active, true
+    = f.label :active,  "No", value: "false"
+    = radio_button :post, :active, false
+  .field
+    = f.label :user
+    = f.text_field :user
   .actions = f.submit
