--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -7,6 +7,14 @@ p
   strong Description:
   = @post.description
 
+p
+  strong Active:
+  = @post.active
+
+p
+  strong User:
+  = @post.user
+
 => link_to 'Edit', edit_post_path(@post)
 '|
 =< link_to 'Back', posts_path
