--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -7,3 +7,14 @@ th, td {
 }
 
 tr:nth-child(even) {background-color: #f2f2f2;}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  display: inline;
+  padding: 14px 8px;
+}
