--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,5 +1,9 @@
 p#notice = notice
 
+=content_for :breadcrumbs do
+  li= link_to 'All Posts', posts_path
+  li= @post.title
+
 p
   strong Title:
   = @post.title
